fix: Update Block styles to wrap long dropdowns

--- a/packages/@dcl/inspector/src/components/Block/Block.css
+++ b/packages/@dcl/inspector/src/components/Block/Block.css
@@ -31,3 +31,8 @@
 .Block .content:has(.Field) {
   column-gap: 8px;
 }
+
+.Block .content:has(.Dropdown.Field) {
+  flex-wrap: wrap;
+  row-gap: 12px;
+}
